[gd_scene load_steps=14 format=3 uid="uid://c6k3om1bi8ovc"]

[ext_resource type="Texture2D" uid="uid://dq7t1q1clljpn" path="res://images/Realshit.png" id="1_vaqa4"]
[ext_resource type="Script" path="res://scenes/Camera2D.gd" id="2_ygh8f"]
[ext_resource type="FontFile" uid="uid://c408u3xjkxfuh" path="res://sources/fonts/dos/BlockZone.ttf" id="3_piavh"]
[ext_resource type="Script" path="res://Scripts/Buttons/Back.gd" id="4_lkj7t"]
[ext_resource type="PackedScene" uid="uid://ddfvhntkkvmrk" path="res://scenes/infoscreen.tscn" id="5_kx124"]
[ext_resource type="Script" path="res://scenes/Node2D.gd" id="6_wjwrf"]
[ext_resource type="Texture2D" uid="uid://bcvmulc35vs6t" path="res://images/menu.png" id="7_epmr3"]
[ext_resource type="Texture2D" uid="uid://rbuw1y4wsipp" path="res://images/menuPiss.png" id="8_6rmg3"]
[ext_resource type="Texture2D" uid="uid://c5u33pm4lnno4" path="res://images/menuBlue.png" id="9_3adqs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ocva"]
size = Vector2(112, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cpk3d"]
size = Vector2(147, 94)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_25edx"]
size = Vector2(149, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3qvpl"]
size = Vector2(132, 61)

[node name="Node2D" type="Node2D"]

[node name="FakeShit-export" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(250.5, -339.5)
scale = Vector2(2.71167, 2.71167)
texture = ExtResource("1_vaqa4")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("2_ygh8f")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = -36.0
offset_right = 200.0
offset_bottom = -5.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 10
metadata/_edit_lock_ = true

[node name="Button" type="Button" parent="CanvasLayer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_piavh")
text = "Back To Title"
script = ExtResource("4_lkj7t")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control2" parent="CanvasLayer/VBoxContainer" instance=ExtResource("5_kx124")]
layout_mode = 2

[node name="Node2D2" type="Node2D" parent="."]

[node name="f1_classroom_1" type="Node2D" parent="Node2D2"]
script = ExtResource("6_wjwrf")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Node2D2/f1_classroom_1"]
position = Vector2(179, 211)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D2/f1_classroom_1/Area2D"]
position = Vector2(-406, -99)
shape = SubResource("RectangleShape2D_2ocva")

[node name="NinePatchRect" type="NinePatchRect" parent="Node2D2/f1_classroom_1/Area2D"]
offset_left = -464.0
offset_top = -135.0
offset_right = -350.0
offset_bottom = -62.0
texture = ExtResource("7_epmr3")
draw_center = false
region_rect = Rect2(0, 0, 50, 50)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="stairsToG" type="Node2D" parent="Node2D2"]
script = ExtResource("6_wjwrf")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Node2D2/stairsToG"]
position = Vector2(179, 211)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D2/stairsToG/Area2D"]
position = Vector2(-29.5, 108)
shape = SubResource("RectangleShape2D_cpk3d")

[node name="NinePatchRect" type="NinePatchRect" parent="Node2D2/stairsToG/Area2D"]
offset_left = -105.0
offset_top = 58.0
offset_right = 45.0
offset_bottom = 163.0
texture = ExtResource("8_6rmg3")
draw_center = false
region_rect = Rect2(0, 0, 50, 50)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="bathroom" type="Node2D" parent="Node2D2"]
script = ExtResource("6_wjwrf")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Node2D2/bathroom"]
position = Vector2(180, 141)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D2/bathroom/Area2D"]
position = Vector2(71.5, -124)
shape = SubResource("RectangleShape2D_25edx")

[node name="NinePatchRect" type="NinePatchRect" parent="Node2D2/bathroom/Area2D"]
offset_left = -3.0
offset_top = -160.0
offset_right = 146.0
offset_bottom = -82.0
texture = ExtResource("9_3adqs")
draw_center = false
region_rect = Rect2(0, 0, 50, 50)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="NinePatchRect2" type="NinePatchRect" parent="Node2D2/bathroom/Area2D"]
offset_left = -246.0
offset_top = -159.0
offset_right = -114.0
offset_bottom = -90.0
texture = ExtResource("9_3adqs")
draw_center = false
region_rect = Rect2(0, 0, 50, 50)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Node2D2/bathroom/Area2D"]
position = Vector2(-180, -127.5)
shape = SubResource("RectangleShape2D_3qvpl")

[connection signal="mouse_entered" from="Node2D2/f1_classroom_1/Area2D" to="Node2D2/f1_classroom_1" method="_on_area_2d_mouse_entered" flags=18]
[connection signal="mouse_exited" from="Node2D2/f1_classroom_1/Area2D" to="Node2D2/f1_classroom_1" method="_on_area_2d_mouse_exited" flags=18]
[connection signal="mouse_entered" from="Node2D2/stairsToG/Area2D" to="Node2D2/stairsToG" method="_on_area_2d_mouse_entered" flags=18]
[connection signal="mouse_exited" from="Node2D2/stairsToG/Area2D" to="Node2D2/stairsToG" method="_on_area_2d_mouse_exited" flags=18]
[connection signal="mouse_entered" from="Node2D2/bathroom/Area2D" to="Node2D2/bathroom" method="_on_area_2d_mouse_entered" flags=18]
[connection signal="mouse_exited" from="Node2D2/bathroom/Area2D" to="Node2D2/bathroom" method="_on_area_2d_mouse_exited" flags=18]
